added --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED